# Pitchstone-Editor

./: .editorconfig  .gitignore  CMakeLists.txt  Makefile  README.md
include/imgui/: imgui_impl_sdl2.cpp  imgui_impl_sdlrenderer2.cpp  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h
include/windows/libavutil/: ffversion.h
resources/shaders/: black.comp
src/: CMakeLists.txt  main.cpp
src/engine/: Engine.cpp  Engine.hpp
src/filters/: Filter.hpp  FilterLibrary.hpp
src/gui/: CMakeLists.txt  GUI.cpp  GUI.hpp  MainGUI.cpp  MainGUI.hpp  SettingsGUI.cpp  SettingsGUI.hpp
src/media/: Media.cpp  Media.hpp  MediaBin.cpp  MediaBin.hpp  MediaCache.cpp  MediaCache.hpp  Resource.cpp  Resource.hpp
src/sys/: Application.cpp  Application.hpp  CMakeLists.txt  System.cpp  System.hpp  domain.cpp  domain.hpp  rational.hpp
src/vulkan/: Allocator.cpp  Allocator.hpp  Buffer.cpp  Buffer.hpp  CMakeLists.txt  CommandPool.cpp  CommandPool.hpp  ComputeShader.cpp  ComputeShader.hpp  Device.cpp  Device.hpp  FiFSyncs.cpp  FiFSyncs.hpp  Framebuffer.hpp  GraphicsShader.cpp  GraphicsShader.hpp  ImGui_13.cpp  ImGui_13.hpp  Image.cpp  Image.hpp  Instance.cpp  Instance.hpp  Queue.cpp  Queue.hpp  QueueManager.cpp  QueueManager.hpp  Rectangle.hpp  Shader.cpp  Shader.hpp  Texture.hpp  Timeline.cpp  Timeline.hpp  Vulkan.cpp  Vulkan.hpp  Window.cpp  Window.hpp
